Paste Footer Tag line

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -474,3 +474,7 @@ body {
 .swiper-button-next:after, .swiper-button-prev:after {
 	color: #ffba55;
 }
+
+.tagline-container {
+	padding: 0 2rem;
+}
