--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,8 +1,8 @@
 .footer {
 	background: #ffba55;
 	padding: 1.5rem 0;
-	margin-top: 2.5rem;
-}
+	/*margin-top: 2.5rem;
+*/}
 
 .footer .container {
 	display: flex;
