--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -13,6 +13,7 @@
 .social-icons {
 	display: flex;
 	justify-content: space-around;
+	padding-left: 0;
 }
 
 .social-icons li {
@@ -27,10 +28,23 @@
 
 .footer .menu {
 	padding-top: 1rem;
+	padding-left: 0;
 }
 
 .footer .menu li a {
 	color: #000;
 	padding: 0 0.75rem;
 	font-size: 0.9rem;
+}
+
+@media (max-width: 592px) {
+	.footer .menu li a {
+		padding: 0 0.5rem;
+		font-size: 0.8rem;
+	}
+
+	.social-icons {
+		max-width: 75%;
+		margin: 0 auto;
+	}
 }
