--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -14,6 +14,10 @@
 	float: right;
 }
 
+.header .menu {
+	width: 75%;
+}
+
 .menu li {
 	list-style-type: none;
 }
@@ -23,4 +27,66 @@
 	text-decoration: none;
 	font-family: 'Roboto', sans-serif;
 	text-transform: uppercase;
+}
+
+.menu-btn {
+	display: none;
+}
+
+.menu-close-btn {
+	display: none;
+}
+
+@media (max-width: 592px) {
+	.header {
+		background: rgba(25,25,25,0.84);
+		padding: 1rem 0;
+		position: fixed;
+	}
+
+	.header .menu {
+		position: fixed;
+		top: 0;
+		bottom: -50px;
+		left: 100%;
+		/*right: 0;*/
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-start;
+		background: rgba(255,255,255,0.95);
+		z-index: 9999;
+		transition: 0.3s;
+		width: 100%;
+	}
+
+	.header .menu li {
+		padding: 1.5rem 0;
+	}
+
+	.header .menu li a {
+		color: #000;
+	}
+
+	.menu-btn {
+		display: block;
+		float: right;
+		text-decoration: none;
+		font-size: 1.5rem;
+		color: #fff;
+	}
+
+	.menu-close-btn {
+		display: block;
+		float: right;
+		font-size: 1.75rem;
+		margin-right: 1.25rem;
+		margin-top: 1.25rem;
+		text-decoration: none;
+		color: #000;
+		text-align: end;
+	}
+
+	.menu {
+		width: 100%;
+	}
 }
